# BasicTasks_PreProcessingTools

./: .gitignore  DATA ANALYS - MARKETING: Bài "Phân nhóm khách hàng" Marketing - chị Phương_2024.md  DATA KHÁCH HÀNG.xlsx  README.md  audit_folders.py  reindex_folders.py  update_readme_final.py
Crawl_YoutubeWithChildrenVoice/: .env.example  .gitignore  .sh  CONFIG_GUIDE.md  DATA_MIGRATION.md  README.md  REFACTORING_PLAN.md  SYSTEM_DESIGN.md  api_client_example.py  api_youtube_filterer.py  check_manifest.py  colab_runner.py  crawler_config.json  create_test_records.py  debug_concurrent.py  env_config.py  kaggle_runner.py  migrate_classified_audio.py  migrate_manifest_classified_field.py  migrate_unclassified_audio_positions.py  mock_server.py  next_channels_to_add.md  pyproject.toml  pyrightconfig.json  queries.txt  queue_manager.py  recover_manifest.py  requirements.txt  resync_manifest.py  run_analysis_filtering_upload.py  run_client.py  sort_queries.py  start_api.py  terminal_output_logger.py  test_api.py  test_baseline.py  test_client.py  test_concurrent_filtering.py  test_download_methods.py  test_master_crawler.py  (+14 more)
Crawl_YoutubeWithChildrenVoice/config/: __init__.py  base_config.py  crawler_config.py  downloader_config.py  validator_config.py
Crawl_YoutubeWithChildrenVoice/crawler_outputs/: crawler_manifest.backup_merge_20251008_225351.json  crawler_manifest.json
Crawl_YoutubeWithChildrenVoice/final_audio_files/: manifest.json  manifest.json.backup_20251001_070316  manifest.json.backup_20251001_070412  manifest.json.backup_20251001_070738  manifest.json.backup_20251001_070758  manifest.json.backup_20251001_070806  manifest.json.backup_20251001_070924  manifest.json.backup_20251001_071247  manifest.json.backup_20251001_071345  manifest.json.backup_20251001_071452  manifest.json.backup_20251001_071530  manifest.json.backup_20251001_072050  manifest.json.backup_20251001_072143  manifest.json.backup_20251001_072305  manifest.json.backup_20251001_072508  manifest.json.backup_20251001_072515  manifest.json.backup_20251001_081428  manifest.json.backup_20251001_081450  manifest.json.backup_20251001_083649  manifest.json.backup_20251001_083805  manifest.json.backup_20251001_114721  manifest.json.backup_20251004_090436  manifest.json.backup_20251006_090026  manifest.json.backup_20251007_104305  processing_queue.backup  processing_queue.json  tmp_6431.webm
Crawl_YoutubeWithChildrenVoice/history/: CODEBASE_HEALTH_REPORT.md  CRITICAL_ISSUES_ANALYSIS.md  CRITICAL_ISSUES_ANALYSIS_2025-10-18.md  DATA_MANAGEMENT.md  DETAILED_FIXES_AND_LOCATIONS.md  FINAL_VERIFICATION_REPORT.md  FIXES_APPLIED_SUMMARY.md  INTEGRATION_ANALYSIS.md  INTEGRATION_CHANGES.md  INTEGRATION_VERIFICATION.md  QUICK_REFERENCE.md  REMAINING_CRITICAL_ISSUES.md
Crawl_YoutubeWithChildrenVoice/models/: __init__.py  analytics_models.py  crawler_models.py  validation_models.py
Crawl_YoutubeWithChildrenVoice/selenium_proxy_layer/: README.md  __init__.py  browser_pool.py  config.py  health_monitor.py  http_proxy_server.py  (+7 more)
(+293 files in other folders)
