[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-children-voice-crawler"
version = "1.0.0"
description = "Modular YouTube crawler for discovering and processing children's voice content"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Core dependencies
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",

    # YouTube API
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",

    # Audio processing
    "librosa>=0.10.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",

    # Machine Learning
    "scikit-learn>=1.0.0",
    "transformers>=4.0.0",

    # HTTP clients
    "aiohttp>=3.8.0",
    "requests>=2.25.0",

    # Video downloading
    "yt-dlp>=2023.0.0",

    # Progress and utilities
    "tqdm>=4.60.0",
    "pandas>=1.3.0",

    # Web scraping (if needed)
    "selenium>=4.0.0",
    "webdriver-manager>=4.0.0",

    # API server
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=1.0.0",
    "flake8>=4.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
]

[project.scripts]
yt-crawler = "main:main"

[project.urls]
Homepage = "https://github.com/your-org/youtube-children-voice-crawler"
Repository = "https://github.com/your-org/youtube-children-voice-crawler.git"
Issues = "https://github.com/your-org/youtube-children-voice-crawler/issues"

[tool.setuptools]
packages = ["src"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.json", "*.txt", "*.md"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "librosa.*",
    "torch.*",
    "googleapiclient.*",
    "aiohttp.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "asyncio: marks tests as async (using pytest-asyncio)",
]